--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "install": "^0.13.0",
     "jsdom": "^16.2.1",
     "lowdb": "1.0.0",
+    "luxon": "2.0.1",
     "markdown-table": "^2.0.0",
     "moment": "^2.24.0",
     "morgan": "~1.9.1",
